shop favorite list

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -56,7 +56,7 @@ body {
     }
 }
 
-.products-index-page {
+.products-index-page, .products-favorites-page {
   .pagination {
     margin-right: 5px;
   }
